...
              Expanded(
                child: TextButton(
                  onPressed: () => c.read<ServicesBloc>().add(const SwitchTab(0)),
                  style: ButtonStyle(
                    backgroundColor: WidgetStateProperty.all(isActiveTab == 0 ? Colors.blueGrey : Colors.transparent),
                  ),
                  child: Text('All Services', style: TextStyle(color: isActiveTab == 0 ? Colors.white : Colors.grey, fontSize: 16)),
                ),
              ),
              Expanded(
                child: TextButton(
                  onPressed: () => c.read<ServicesBloc>().add(const SwitchTab(1)),
                  style: ButtonStyle(
                    backgroundColor: WidgetStateProperty.all(isActiveTab == 1 ? Colors.blueGrey : Colors.transparent),
                  ),
                  child: Text('Favorites', style: TextStyle(color: isActiveTab == 1 ? Colors.white : Colors.grey, fontSize: 16)),
                ),
              ),
            ],
          ),
        );
      },
...
